* Hacker Evolution Duality - Added Steam Registry path and new files to backup
* Half-Life - Added Norwegian region
* Half-Life 2 - Added Steam Registry path
* Half-Life 2: Deathmatch
* Half-Life 2: Lost Coast - Added Settings type and Added Steam registry path
* Half-Life: Blue Shift - Added Norwegian region
* Half-Life: OpposingForce - Added Norwegian region
* Jack Keane - Added settings type
* Lugaru HD - Fixed the files to back up (Files in xml does not exist)
* Machinarium - Added new flashshared path
* Medal of Honor: Warfighter
* Osmos - Added new types
* Poker Night at the Inventory - Added Settings type
* Police Force
* Portal - Added Settings Type and Steam Registry path
* Pulsen
* Recettear: An Item Shop's Tale - Added Steam Registry path
* Sam & Max: - The Devil's Playground Episode 2 - Added Settings type
* Sam & Max: - The Devil's Playground Episode 3 - Added Settings type
* Sam & Max: - The Devil's Playground Episode 4 - Added Settings type
* Sam & Max: - The Devil's Playground Episode 5 - Added Settings type
* Sniper Elite - Added Steam Registry Path
* Sniper Elite V2 - Added Settings type and SteamCloud
* Sniper: Ghost Warrior - Added Settings type
* Spaces Pirates and Zombies - Added Settings type
* Streets of Moscow - Updated Settings type
* Team Fortress Classic
* Trackmania Nations Forever - Added four(4) new types
* Trials 2: Second Edition - Added Settings type
* Uplink - Added Steam Registry path
* Virtual Villagers 2: The Lost Children - Added exclude
* Virtual Villagers 3: The Secret City - Added exclude
* Virtual Villagers: A New Home
* Volvo - The Game
* Xpand Rally - Updated Settings type and Added Steam Registry path
* Xpand Rally Extreme - Updated Settings type and Added Steam Registry path and Fixed title name
* Zero Gear
Contributed by GameSaveManager
* Age of Wonders II
* Anna
* Arx Libertatis
* A Valley Without Wind
* Bang Bang Racing
* Crazy Taxi
* Dirt:Showdown - Disc info
* Dragon Age: Legends
* East India Company